<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pastel.mylocker.ActivitySettings" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout 
            android:onClick="setDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ab_solid_shadow_mtrl_alpha"
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/lock1"
                 android:background="@drawable/ripple"
                android:id="@+id/imgSetDefault"/>
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtSetDefault"
                android:layout_gravity="center"/>
            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:id="@+id/switchSetDefault"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ab_solid_shadow_holo"
            android:onClick="startSetPattern"
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/pattern1"
                android:background="@drawable/ripple"
                android:id="@+id/imgSelectPattern"/>
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtPattern"
                android:layout_gravity="center"/>
            
        </LinearLayout>
        
	<LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/question"
                android:background="@drawable/ripple"
                android:id="@+id/imgSelectQuestion"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
             	android:background="@drawable/ab_solid_shadow_holo">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtSecurityQsn"
                android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/photos"
                android:background="@drawable/ripple"
                android:id="@+id/imgSelectImages"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
             	android:background="@drawable/ab_solid_shadow_holo">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtCustomise"
                android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/vibrate1"
                android:background="@drawable/ripple"
                android:id="@+id/imgVibrate"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="switchVibrate"
             	android:background="@drawable/ab_solid_shadow_holo">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtVibrate"
                android:layout_gravity="center"/>
             <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:id="@+id/switchVibrate"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/sound1"
                android:background="@drawable/ripple"
                android:id="@+id/imgSound"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="switchSound"
             	android:background="@drawable/ab_solid_shadow_holo">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtSound"
                android:layout_gravity="center"/>
             <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:id="@+id/switchSound"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:background="@drawable/ab_solid_shadow_holo"
            android:orientation="horizontal">
            <ImageButton 
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/about1"
                android:background="@drawable/ripple"
                android:id="@+id/imgAbout"/>
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/txtColor"
                android:paddingLeft="10dp"
                android:textSize="@dimen/txtSize"
                android:text="@string/txtAbout"
                android:layout_gravity="center"/>
            
             </LinearLayout>
   
    <LinearLayout 
        android:background="@drawable/ab_solid_shadow_holo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>
    </LinearLayout>
</ScrollView>
