<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true" >
        
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.pastel.mylocker.SetPattern" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPatternNote" />

    <Spinner
        android:id="@+id/spnrPattern"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

           
            
            <Spinner
                android:id="@+id/spinner8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

     <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
	   			 android:text="@string/btnSetPattern"
	    />
	
	<Button
	    android:id="@+id/btnReset"
	   android:layout_width="wrap_content"
                android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="@string/btnResetPattern"
	    />
	</LinearLayout>
</LinearLayout>
    </ScrollView>